Provide a link to a Wikipedia antry about the artist. Fix spacing on the artist page.

--- a/dumbhippo/trunk/server/web/css2/artist-positions.css
+++ b/dumbhippo/trunk/server/web/css2/artist-positions.css
@@ -10,7 +10,7 @@
     position: relative;
     float:    left;
     width:    80px;
-    height:   80px;
+    height:   100%;
     overflow: hidden;
 }
 
